# Watcher

./: .clang-format  .clang-format.back  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  clang-format.sh  compile_commands.json  prototypeConfig.json  windows.cmake
resources/: alarm.opus  style.css  wambau.opus
src/: CMakeLists.txt  main.cpp
src/aclock/: CMakeLists.txt  aclock.cpp  aclock.hpp
src/configure/: CMakeLists.txt  configure.cpp  configure.hpp
src/loger/: CMakeLists.txt  loger.cpp  loger.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/opusdecoder/: CMakeLists.txt  opusdecoder.cpp  opusdecoder.hpp
src/sdlplayer/: CMakeLists.txt  sdlplayer.cpp  sdlplayer.hpp
src/timer/: CMakeLists.txt  timer.cpp  timer.hpp
src/ui/: CMakeLists.txt  clockentity.cpp  clockentity.hpp  entityManager.cpp  entityManager.hpp  logentity.cpp  logentity.hpp  mainForm.hpp  mainform.cpp  mainform.hpp  timerentity.cpp  timerentity.hpp  wfr.abstract.hpp  wfr.hpp  wfraclock.cpp  wfraclock.hpp  wfrlog.cpp  wfrlog.hpp  wfrtm.cpp  wfrtm.hpp  wnotebook.cpp  wnotebook.hpp
src/ui/builder/: gtk4clock.ui  gtk4logger.ui  gtk4main.ui  gtk4timer.ui  gtk4watcher.cmb
src/ui/wnotebook/: CMakeLists.txt  wnotebook.cpp  wnotebook.hpp
x86_64-w64-mingw32/include/: bzlib.h  expat_config.h  jconfig.h  tif_config.h
x86_64-w64-mingw32/include/SDL2/: SDL_config.h
x86_64-w64-mingw32/include/c++/10.1.0/x86_64-w64-mingw32/bits/: c++config.h
x86_64-w64-mingw32/include/freetype2/freetype/config/: ftoption.h
x86_64-w64-mingw32/include/glibmm-2.4/glibmm/: value_basictypes.h  variant_basictypes.h
x86_64-w64-mingw32/include/jasper/: jas_config.h
x86_64-w64-mingw32/include/openssl/: opensslconf.h
x86_64-w64-mingw32/include/poppler/glib/: poppler-features.h
x86_64-w64-mingw32/lib/: fontconfig.def  libstdc++.dll.a-gdb.py
x86_64-w64-mingw32/lib/atkmm-1.6/include/: atkmmconfig.h
x86_64-w64-mingw32/lib/cairomm-1.0/include/: cairommconfig.h
x86_64-w64-mingw32/lib/cmake/harfbuzz/: harfbuzz-config.cmake
x86_64-w64-mingw32/lib/gdkmm-3.0/include/: gdkmmconfig.h
x86_64-w64-mingw32/lib/giomm-2.4/include/: giommconfig.h
x86_64-w64-mingw32/lib/glib-2.0/include/: glibconfig.h
x86_64-w64-mingw32/lib/glibmm-2.4/include/: glibmmconfig.h
x86_64-w64-mingw32/lib/glibmm-2.4/proc/: generate_wrap_init.pl  gmmproc
x86_64-w64-mingw32/lib/gtkmm-3.0/include/: gtkmmconfig.h
x86_64-w64-mingw32/lib/icu/67.1/: Makefile.inc  pkgdata.inc
x86_64-w64-mingw32/lib/ldscripts/: i386pe.x  i386pe.xa  i386pe.xbn  i386pe.xe  i386pe.xn  i386pe.xr  i386pe.xu  i386pep.x  i386pep.xa  i386pep.xbn  i386pep.xe  i386pep.xn  i386pep.xr  i386pep.xu
x86_64-w64-mingw32/lib/openjpeg-2.3/: OpenJPEGConfig.cmake  OpenJPEGTargets-release.cmake
x86_64-w64-mingw32/lib/pangomm-1.4/include/: pangommconfig.h
x86_64-w64-mingw32/lib/pkgconfig/: atk.pc  atkmm-1.6.pc  bzip2.pc  cairo-fc.pc  cairo-ft.pc  cairo-gobject.pc  cairo-pdf.pc  cairo-png.pc  cairo-ps.pc  cairo-script.pc  cairo-svg.pc  cairo-tee.pc  cairo-win32-font.pc  cairo-win32.pc  cairo.pc  cairomm-1.0.pc  cairomm-ft-1.0.pc  cairomm-pdf-1.0.pc  cairomm-png-1.0.pc  cairomm-ps-1.0.pc  cairomm-svg-1.0.pc  cairomm-win32-1.0.pc  cairomm-win32-font-1.0.pc  datrie-0.2.pc  epoxy.pc  expat.pc  fontconfig.pc  freetype2.pc  fribidi.pc  gail-3.0.pc  gdk-3.0.pc  gdk-pixbuf-2.0.pc  gdkmm-3.0.pc  gio-2.0.pc  gio-windows-2.0.pc  giomm-2.4.pc  glib-2.0.pc  glibmm-2.4.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  (+49 more)
x86_64-w64-mingw32/lib/sigc++-2.0/include/: sigc++config.h
x86_64-w64-mingw32/share/icons/Adwaita/cursors/: copy.cur  dot_box_mask.cur  e-resize.cur  fleur.cur  grab.cur  hand.cur  n-resize.cur  ne-resize.cur  no-drop.cur  ns-resize.cur  nw-resize.cur  nwse-resize.cur  pirate.cur  pointer.cur  progress.ani  s-resize.cur  se-resize.cur  size_all.cur  size_hor.cur  sw-resize.cur  text.cur  top_left_arrow.cur  w-resize.cur  wait.ani
